# recommander

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/: app.py  inference.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_app.py  test_inference.py
