# pyproject.toml

[tool.poetry]
name = "recommender-app"
version = "0.1.0"
description = "Recommender system app"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.2.2"  # Mise à jour de Flask vers une version compatible
scikit-learn = "^1.0.2"
werkzeug = "^2.2.2"  # Mise à jour de Werkzeug vers une version compatible

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
requests = "^2.26.0"
